# multi-agent-simulation-engine

./: Makefile  README.md  mkdocs.yml  pyproject.toml
examples/: battle_game.ipynb  first_example.ipynb
requirements/: packages.txt  requirements.txt
scripts/: main.py  test.py
src/mase/: __init__.py  abmodel.py  agent.py  agentid.py  agentpool.py  agentstatepool.py  errors.py  location.py  mapgenerators.py  object_mapper.py  types.py
src/mase/coords/: __init__.py  algorithms.py  base_coord.py  coords.py
src/mase/hexmap/: __init__.py  algorithms.py  cart_coord.py  coords.py  hex_coord.py  hexmap.py  hexmapgenerator.py  hexpos.py  position.py  rad_coord.py
src/mase/hexmap/cyhexpos/: __init__.py  algorithms.py  errors.py
src/mase/hexnetmap/: hexnetmap.py
src/mase/maps/: __init__.py
src/mase/viz/: __init__.py  hexgrid_scaler.py  hexmap_loc.py  hexmap_visualizer.py  pygame_context.py  visualizer.py
src/mypkg/: __init__.py  separate_funcs.py  small_type.py
src/mypkg/big_type/: __init__.py  big_helper.py  big_type.py
src/mypkg/submodule/: __init__.py  submodfuncs.py
tests/: mytest.py  test_coords.py
